tests/NormalTests/paczka1/fuzzy1/62306996.err
Error in line 5: zta A33 36,9
Error in line 8: gi07m7Nd A623 34,4
Error in line 20: oXBR A33 14,2
Error in line 27: wVX54 A734 40,1
Error in line 31: wVX54 S540 4,8
Error in line 35: zta A734 30,5
